overflow fixed

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -5,7 +5,6 @@ body {
     flex-direction: row;
     margin: 0;
     color: white;
-    min-height: 100vh;
 }
 #root {
     height: 100%;
@@ -39,7 +38,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 100%;
+    height: auto;
+    overflow: auto;
 
     .welcome {
         display: flex;
@@ -47,7 +47,7 @@ body {
         height: 100%;
         justify-content: center;
         margin: 2em;
-        // align-items: center;
+        color: black;
     }
 }
 
